test_programs/compile_failure/overlapping_dep_and_mod/bin/src/main.nr
// bin/main.nr

fn main() -> pub Field {
    foo::bar() + foo::baz()
}

mod foo {
    pub(crate) fn bar() -> Field {
        5
    }
}
